# rolez

./: .env.example  .gitignore  Dockerfile  HIVE-RULES.md  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: auth.py  config.py  db.py  main.py  models.py  provisioner.py  resolver.py  schemas.py  upstream_auth.py  validation.py
app/clients/: agentz.py  skillz.py  techsaac.py
app/routers/: admin.py  health.py  public.py
cli/: rolez
cli-node/: README.md  package-lock.json  package.json  tsconfig.json
cli-node/src/: api.ts  cli.ts  config.ts  errors.ts  types.ts
cli-node/test/: api-errors.test.ts  api.test.ts
docs/: PROVISIONER-V0.2-PLAN.md  openapi.json  patrics-sacred-wisdom.md
migrations/: env.py
migrations/versions/: 0001_init.py  0002_drop_provision_events.py
tests/: conftest.py  test_admin_auth.py  test_admin_roles.py  test_cli.py  test_cli_bootstrap.py  test_clients.py  test_coverage_gaps.py  test_health.py  test_models.py  test_provisioner.py  test_public_api.py  test_resolver.py  test_upstream_auth.py  test_validation.py
tests-integration/: README.md  conftest.py  test_agentz_contract.py  test_rolez_live_smoke.py  test_skillz_contract.py  test_techsaac_contract.py
