[project]
name = "rolez"
version = "0.1.0"
description = "Role registry and provisioner for the startanaicompany.com agent fleet"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "packaging>=24.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "aiosqlite>=0.20",
  "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: real HTTP calls to live external services (skillz, agentz, tech.saac); requires SKILLZ_TOKEN / AGENTZ_TOKEN / MCP_ORCHESTRATOR_API_KEY env vars",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
source = ["app"]

[tool.mutmut]
# Focus mutation testing on pure helpers + auth — high-signal logic where
# every branch should be killed by a test. Routers and provisioner are
# heavier integration paths; they're already covered by behavioural tests.
paths_to_mutate = [
    "app/auth.py",
    "app/upstream_auth.py",
    "app/resolver.py",
    "app/validation.py",
]
also_copy = [
    "app/__init__.py",
    "app/clients/",
    "app/config.py",
    "app/db.py",
    "app/main.py",
    "app/models.py",
    "app/schemas.py",
    "app/routers/",
    "cli/",
]
tests_dir = ["tests/"]
pytest_add_cli_args = ["-x", "-q"]
mutate_only_covered_lines = true
